feat: add custom theme gruvbox

--- a/src/app/feature/ui/layout/footer/footer.component.html
+++ b/src/app/feature/ui/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer rounded-t-lg bg-neutral p-4 text-neutral-content">
+<footer class="footer bg-neutral text-neutral-content rounded-t-lg p-4">
   <aside class="grid grid-flow-col gap-4 lg:grid-flow-row">
     <span class="logo block px-2">timeline</span>
     <div
