--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'tailwindcss';
 
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: pastel;
+}
 @plugin "daisyui/theme" {
   name: 'gruvbox';
   default: true;
