--- a/src/app/feature/account/features/feature-stage/feature-stage.component.html
+++ b/src/app/feature/account/features/feature-stage/feature-stage.component.html
@@ -1,8 +1,8 @@
 <div class="tooltip w-full" [attr.data-tip]="view()?.title">
   <div class="stage stage-{{ view()?.stage }} flex w-full gap-1 px-4 py-4">
-    <span class="rounded-box bg-base-300 h-2 flex-grow"></span>
-    <span class="rounded-box bg-base-300 h-2 flex-grow"></span>
-    <span class="rounded-box bg-base-300 h-2 flex-grow"></span>
-    <span class="rounded-box bg-base-300 h-2 flex-grow"></span>
+    <span class="rounded-box bg-base-300 h-2 grow"></span>
+    <span class="rounded-box bg-base-300 h-2 grow"></span>
+    <span class="rounded-box bg-base-300 h-2 grow"></span>
+    <span class="rounded-box bg-base-300 h-2 grow"></span>
   </div>
 </div>
