fix: fix footer

--- a/src/app/feature/ui/layout/footer/footer.component.html
+++ b/src/app/feature/ui/layout/footer/footer.component.html
@@ -1,4 +1,5 @@
-<footer class="footer bg-neutral text-neutral-content rounded-t-lg p-4">
+<footer
+  class="footer bg-neutral text-neutral-content md:footer-horizontal rounded-t-lg p-4">
   <aside class="grid grid-flow-col gap-4 lg:grid-flow-row">
     <span class="logo block px-2">timeline</span>
     <div
