fix: fix some inouts issues

--- a/src/app/feature/account/features/add/add.component.html
+++ b/src/app/feature/account/features/add/add.component.html
@@ -1,13 +1,13 @@
 <div class="lg:flex-auto">
   <h3 class="text-lg lg:mb-2">name</h3>
-  <label class="join w-full">
+  <label class="w-full">
     <input
       type="text"
       name="name"
       [class.input-error]="
         form.controls.name.invalid && form.controls.name.touched
       "
-      class="input join-item input-bordered w-full grow"
+      class="input w-full"
       [formControl]="form.controls.name" />
   </label>
 </div>
