--- a/src/app/feature/account/features/settings/settings.component.html
+++ b/src/app/feature/account/features/settings/settings.component.html
@@ -13,7 +13,7 @@
         type="text"
         name="name"
         [class.input-error]="form.controls.name.invalid"
-        class="input join-item input-bordered w-full grow"
+        class="input join-item w-full grow"
         [formControl]="form.controls.name" />
       <app-feature-flag
         [feature]="'show_user_accounts'"
