--- a/src/app/feature/events/edit-event-form/link-input/link-input.component.html
+++ b/src/app/feature/events/edit-event-form/link-input/link-input.component.html
@@ -2,7 +2,7 @@
   <div class="label">
     <span class="label-text">link</span>
   </div>
-  <label class="input input-bordered flex items-center gap-2">
+  <label class="input flex w-full max-w-xs items-center gap-2">
     <input
       name="url"
       type="text"
