--- a/src/app/feature/events/edit-event-form/text-input/text-input.component.html
+++ b/src/app/feature/events/edit-event-form/text-input/text-input.component.html
@@ -5,7 +5,7 @@
 
   <input type="hidden" name="id" [formControl]="form().controls.id" readonly />
 
-  <label class="input input-bordered flex items-center gap-2">
+  <label class="input flex w-full max-w-xs items-center gap-2">
     <input
       type="text"
       class="w-full grow"
@@ -15,8 +15,8 @@
 </label>
 <label class="form-control">
   <div class="label">
-    <span class="label-text"
-      >Mardown content
+    <span class="label-text">
+      Mardown content
       <a
         class="link"
         tabindex="1"
