--- a/src/app/feature/timeline/components/add-timeline/add-timeline.component.html
+++ b/src/app/feature/timeline/components/add-timeline/add-timeline.component.html
@@ -3,7 +3,7 @@
 }
 
 <input
-  class="input input-lg input-bordered mt-4 mb-8 w-full"
+  class="input input-lg mt-4 mb-8 w-full"
   placeholder="add a name of timeline"
   name="timelineName"
   [attr.disabled]="isLoading() ? true : null"
