--- a/src/app/feature/events/edit-event-form/date-time-input/date-time-input.component.html
+++ b/src/app/feature/events/edit-event-form/date-time-input/date-time-input.component.html
@@ -15,7 +15,7 @@
     <input
       name="time"
       type="text"
-      class="input input-bordered w-20"
+      class="input w-20"
       [class.input-error]="!form().controls.time.valid"
       [formControl]="form().controls.time" />
   </label>
