fix: remove textarea-bordered

--- a/src/app/feature/account/features/settings/settings.component.html
+++ b/src/app/feature/account/features/settings/settings.component.html
@@ -34,7 +34,7 @@
       <textarea
         name="about"
         [class.input-error]="form.controls.about.invalid"
-        class="textarea textarea-bordered w-full grow"
+        class="textarea w-full grow"
         [formControl]="form.controls.about"
         placeholder="about"
         >{{ form.controls.about.value }}</textarea
