--- a/src/app/feature/events/edit-event-form/text-input/text-input.component.html
+++ b/src/app/feature/events/edit-event-form/text-input/text-input.component.html
@@ -27,7 +27,7 @@
     </span>
   </div>
   <textarea
-    class="textarea textarea-bordered h-52 w-full"
+    class="textarea h-52 w-full"
     name="content"
     [formControl]="form().controls.content"></textarea>
 </label>
