fix: remove useless classes

--- a/src/app/feature/events/edit-event-form/date-time-input/date-time-input.component.html
+++ b/src/app/feature/events/edit-event-form/date-time-input/date-time-input.component.html
@@ -9,9 +9,9 @@
   [formControl]="form().controls.date"
   readonly />
 
-<div class="form-control">
+<div>
   <label class="label cursor-pointer">
-    <span class="label-text">Time</span>
+    <span>Time</span>
     <input
       name="time"
       type="text"
@@ -20,9 +20,9 @@
       [formControl]="form().controls.time" />
   </label>
 </div>
-<div class="form-control">
+<div>
   <label class="label cursor-pointer">
-    <span class="label-text">Show time on timeline</span>
+    <span>Show time on timeline</span>
     <input
       name="show-time"
       type="checkbox"
