--- a/src/app/feature/events/edit-event-form/tags-input/tags-input.component.html
+++ b/src/app/feature/events/edit-event-form/tags-input/tags-input.component.html
@@ -1,6 +1,6 @@
-<label class="form-control">
+<label>
   <div class="label">
-    <span class="label-text">Tags</span>
+    <span>Tags</span>
   </div>
   <label class="input flex w-full max-w-xs items-center gap-2">
     <input
@@ -11,7 +11,7 @@
       [attr.disabled]="isDisabled() === true ? true : null" />
   </label>
   <div class="label">
-    <span class="label-text-alt">
+    <span>
       Pressing Enter will add a tag. You can add multiple tags, separated by
       commas.
     </span>
