--- a/src/app/feature/events/edit-event-form/text-input/text-input.component.html
+++ b/src/app/feature/events/edit-event-form/text-input/text-input.component.html
@@ -1,6 +1,6 @@
-<label class="form-control">
+<label>
   <div class="label">
-    <span class="label-text">Title</span>
+    <span>Title</span>
   </div>
 
   <input type="hidden" name="id" [formControl]="form().controls.id" readonly />
@@ -13,9 +13,9 @@
       [formControl]="form().controls.title" />
   </label>
 </label>
-<label class="form-control">
+<label>
   <div class="label">
-    <span class="label-text">
+    <span>
       Mardown content
       <a
         class="link"
