--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,11 @@ body {
   }
 }
 
+//fix disabled button
+.btn:is(:disabled, [disabled], .btn-disabled):not(.btn-link, .btn-ghost) {
+  color: color-mix(in oklab, var(--color-base-content) 10%, transparent);
+}
+
 html.dark .hero {
   background-color: #3c3836;
 }
