--- a/src/app/feature/ui/layout/header/header.component.html
+++ b/src/app/feature/ui/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="flex-1">
     <a class="logo btn text-xl" href="/"> timeline </a>
   </div>
-  <div class="flex-none gap-2">
+  <div class="inline-flex flex-none items-center gap-2">
     <app-header-theme-switch
       [isDark]="isDarkTheme()"
       (toggleTheme)="toggleTheme()" />
