fix: fix avatar placeholder

--- a/src/app/feature/account/share/view/account-view.component.html
+++ b/src/app/feature/account/share/view/account-view.component.html
@@ -4,7 +4,7 @@
   (click)="accountClick.emit()"
   (keydown.enter)="accountClick.emit()"
   tabindex="0">
-  <div class="avatar placeholder bg-primary text-primary-content">
+  <div class="avatar avatar-placeholder bg-primary text-primary-content">
     <div
       class="w-12 bg-cover bg-no-repeat"
       [class.with-avatar]="account().avatar"
