--- a/src/app/feature/events/edit-event-form/tags-input/tags-input.component.html
+++ b/src/app/feature/events/edit-event-form/tags-input/tags-input.component.html
@@ -1,21 +1,18 @@
-<label>
-  <div class="label">
-    <span>Tags</span>
-  </div>
-  <label class="input flex w-full max-w-xs items-center gap-2">
-    <input
-      #tag
-      type="text"
-      class="w-full"
-      (keyup.enter)="addTag(tag)"
-      [attr.disabled]="isDisabled() === true ? true : null" />
+<fieldset class="fieldset">
+  <label class="fieldset-label">Tags</label>
+
+  <input
+    #tag
+    type="text"
+    class="input w-full min-w-xs"
+    (keyup.enter)="addTag(tag)"
+    [attr.disabled]="isDisabled() === true ? true : null" />
+
+  <label class="fieldset-label">
+    Pressing Enter will add a tag. You can add multiple tags, separated by
+    commas.
   </label>
-  <div class="label">
-    <span>
-      Pressing Enter will add a tag. You can add multiple tags, separated by
-      commas.
-    </span>
-  </div>
+
   @if (viewTags().length > 0) {
     <div>
       @for (tag of viewTags(); track $index) {
@@ -30,4 +27,4 @@
       }
     </div>
   }
-</label>
+</fieldset>
