--- a/src/app/feature/events/edit-event-form/text-input/text-input.component.html
+++ b/src/app/feature/events/edit-event-form/text-input/text-input.component.html
@@ -1,36 +1,28 @@
-<label>
-  <div class="label">
-    <span>Title</span>
-  </div>
-
+<fieldset class="fieldset">
   <input type="hidden" name="id" [formControl]="form().controls.id" readonly />
 
-  <label class="input flex w-full max-w-xs items-center gap-2">
-    <input
-      type="text"
-      class="w-full grow"
-      name="title"
-      [formControl]="form().controls.title" />
+  <label class="fieldset-label">Title</label>
+  <input
+    type="text"
+    class="input w-full min-w-xs"
+    name="title"
+    [formControl]="form().controls.title" />
+
+  <label class="fieldset-label">
+    Mardown content
+    <a
+      class="link"
+      tabindex="1"
+      (click)="showHelp.set(true)"
+      (keyup.enter)="showHelp.set(true)">
+      <ng-icon name="saxMessageQuestionBulk" size="22" />
+    </a>
   </label>
-</label>
-<label>
-  <div class="label">
-    <span>
-      Mardown content
-      <a
-        class="link"
-        tabindex="1"
-        (click)="showHelp.set(true)"
-        (keyup.enter)="showHelp.set(true)">
-        <ng-icon name="saxMessageQuestionBulk" size="22" />
-      </a>
-    </span>
-  </div>
   <textarea
     class="textarea h-52 w-full"
     name="content"
     [formControl]="form().controls.content"></textarea>
-</label>
+</fieldset>
 
 <app-shared-modal
   title="Markdown"
