--- a/src/app/feature/ui/layout/components/notifications/notifications-container.component.html
+++ b/src/app/feature/ui/layout/components/notifications/notifications-container.component.html
@@ -1,4 +1,4 @@
-<div class="notification-container fixed top-0 right-10 z-30 w-96 pe-4 pt-2">
+<div class="notification-container fixed right-10 top-0 z-30 w-96 pe-4 pt-2">
   @for (message of messages(); track $index) {
     <div
       tabindex="0"
