--- a/src/app/feature/events/edit-event-form/text-input/text-input.component.html
+++ b/src/app/feature/events/edit-event-form/text-input/text-input.component.html
@@ -4,7 +4,7 @@
   <label class="fieldset-label">Title</label>
   <input
     type="text"
-    class="input w-full min-w-xs"
+    class="input min-w-xs w-full"
     name="title"
     [formControl]="form().controls.title" />
 
