fix: fix timeline

--- a/src/app/feature/events/edit-event-form/tags-input/tags-input.component.html
+++ b/src/app/feature/events/edit-event-form/tags-input/tags-input.component.html
@@ -4,7 +4,7 @@
   <input
     #tag
     type="text"
-    class="input min-w-xs w-full"
+    class="input w-full min-w-xs"
     (keyup.enter)="addTag(tag)"
     [attr.disabled]="isDisabled() === true ? true : null" />
 
