--- a/src/app/feature/account/features/settings/avatar/avatar-container.component.html
+++ b/src/app/feature/account/features/settings/avatar/avatar-container.component.html
@@ -14,7 +14,7 @@
       }
     </div>
   }
-  <div class="join absolute -bottom-2 right-0">
+  <div class="join absolute right-0 -bottom-2">
     <a
       class="btn btn-primary join-item btn-sm"
       (click)="avatarInput.click()"
