--- a/src/app/feature/events/edit-event-form/link-input/link-input.component.html
+++ b/src/app/feature/events/edit-event-form/link-input/link-input.component.html
@@ -4,7 +4,7 @@
   <input
     name="url"
     type="text"
-    class="input min-w-xs w-full"
+    class="input w-full min-w-xs"
     placeholder="Url"
     [formControl]="form().controls.link" />
 
