--- a/src/app/feature/events/share/edit-event/edit-event.component.html
+++ b/src/app/feature/events/share/edit-event/edit-event.component.html
@@ -27,7 +27,7 @@
         </div>
 
         <button
-          class="close btn btn-circle btn-error btn-sm absolute -right-4 -top-4 hidden lg:flex"
+          class="close btn btn-circle btn-error btn-sm absolute -top-4 -right-4 hidden lg:flex"
           [attr.disabled]="loading() === true ? true : null"
           (click)="closeEditForm()">
           ✕
