fix: fix logo svg

--- a/src/app/feature/static-content/share/press-kit/press-kit-page.component.html
+++ b/src/app/feature/static-content/share/press-kit/press-kit-page.component.html
@@ -17,7 +17,7 @@
           <img
             src="/assets/press-kit/full-logo.svg"
             alt="timeline logos"
-            class="h-48" />
+            class="w-full" />
         </figure>
         <div class="card-body">
           <h2 class="card-title">timeline logos</h2>
