feat: add small logo

--- a/src/app/feature/static-content/share/press-kit/press-kit-page.component.html
+++ b/src/app/feature/static-content/share/press-kit/press-kit-page.component.html
@@ -26,7 +26,9 @@
             web to print.
           </p>
           <div class="card-actions justify-end">
-            <a class="btn btn-primary" href="/assets/press-kit/full-logo.svg"
+            <a
+              class="btn btn-primary"
+              href="/assets/press-kit/timeline-press-kit.7z"
               >download</a
             >
           </div>
