--- a/src/app/feature/events/edit-event-form/date-time-input/date-time-input.component.html
+++ b/src/app/feature/events/edit-event-form/date-time-input/date-time-input.component.html
@@ -10,8 +10,9 @@
   readonly />
 
 <div class="mt-4 flex place-content-center gap-2">
-  <label class="flex-auto">Time</label>
+  <label class="flex-auto" for="time">Time</label>
   <input
+    id="time"
     name="time"
     type="text"
     class="input w-20 flex-none"
@@ -20,8 +21,9 @@
 </div>
 
 <div class="mt-4 flex place-content-center gap-2">
-  <label class="flex-auto">Show time on timeline</label>
+  <label class="flex-auto" for="show-time">Show time on timeline</label>
   <input
+    id="show-time"
     name="show-time"
     type="checkbox"
     class="toggle flex-none"
