--- a/src/app/feature/events/edit-event-form/link-input/link-input.component.html
+++ b/src/app/feature/events/edit-event-form/link-input/link-input.component.html
@@ -1,7 +1,8 @@
 <fieldset class="fieldset">
-  <label class="fieldset-label">Link</label>
+  <label class="fieldset-label" for="url">Link</label>
 
   <input
+    id="url"
     name="url"
     type="text"
     class="input w-full min-w-xs"
