--- a/src/app/feature/static-content/share/press-kit/press-kit-page.component.html
+++ b/src/app/feature/static-content/share/press-kit/press-kit-page.component.html
@@ -12,7 +12,7 @@
     </p>
 
     <div class="mt-8 flex place-content-center">
-      <div class="card w-96 bg-base-100 shadow-sm">
+      <div class="card bg-base-100 w-96 shadow-sm">
         <figure class="bg-white p-4">
           <img
             src="/assets/press-kit/full-logo.svg"
