refactor: replace huge icons by phosphor

--- a/src/app/feature/ui/layout/footer/footer.component.html
+++ b/src/app/feature/ui/layout/footer/footer.component.html
@@ -5,7 +5,7 @@
     <div
       class="tooltip tooltip-right"
       data-tip="Copyright © 2025 - All right reserved">
-      <ng-icon name="hugeCopyright" size="24"></ng-icon>
+      <ng-icon name="phosphorCopyright" size="24"></ng-icon>
     </div>
   </aside>
 
@@ -27,15 +27,15 @@
       <a
         href="https://github.com/wert2all/timeline-frontend/issues/new"
         target="_blank">
-        <ng-icon name="saxGhostOutline" size="32"></ng-icon>
+        <ng-icon name="phosphorBug" size="32"></ng-icon>
       </a>
     </div>
     <div class="divider divider-horizontal"></div>
     <a href="https://github.com/wert2all/timeline-frontend/" target="_blank">
-      <ng-icon name="hugeGithub01" size="32"></ng-icon>
+      <ng-icon name="phosphorGithubLogo" size="32"></ng-icon>
     </a>
     <a href="https://www.youtube.com/@TimelineDev-ep9vd">
-      <ng-icon name="saxVideoSquareOutline" size="32"></ng-icon>
+      <ng-icon name="phosphorYoutubeLogo" size="32"></ng-icon>
     </a>
   </nav>
 </footer>
