--- a/src/app/feature/ui/layout/header/theme-switch/header-theme-switch.component.html
+++ b/src/app/feature/ui/layout/header/theme-switch/header-theme-switch.component.html
@@ -14,9 +14,9 @@
 <div class="lg:hidden">
   <button class="btn btn-circle btn-ghost" (click)="toggleTheme.emit()">
     @if (isDark()) {
-      <ng-icon name="hugeSun03" size="24"></ng-icon>
+      <ng-icon name="phosphorSun" size="24"></ng-icon>
     } @else {
-      <ng-icon name="saxMoonBold" size="24"></ng-icon>
+      <ng-icon name="phosphorMoonStars" size="24"></ng-icon>
     }
   </button>
 </div>
