--- a/src/app/shared/ui/event/content/components/image/image.component.html
+++ b/src/app/shared/ui/event/content/components/image/image.component.html
@@ -5,7 +5,7 @@
     @if (isError()) {
       <div class="tooltip tooltip-error" data-tip="could not load image">
         <ng-icon
-          name="hugeImageDelete02"
+          name="phosphorImageBroken"
           size="200"
           class="text-warning"></ng-icon>
       </div>
